# Panopticon

./: .gitignore  .gitignore.save  .gitignore~  CMakeLists.txt  CMakeLists.txt.user.2.6pre1  CMakeLists.txt.user.6ce8d0b  Curtis_Bugs  LanguageDesignDoc  LanguageDesignDoc~  Lemon.sh  Lemon.sh~  PanopticonVersion.txt  README.md  README.md~  ToDo  ToDo~  grammar.cpp  grammar.h  grammar.y  lex.yy.c  lexer.l  lexglobal.h  tokens.h
editors/ide/: CMakeLists.txt
editors/ide/include/: CMakeLists.txt
editors/ide/include/core/: CMakeLists.txt  EditBuffer.h  FilePanel.h  MainWindow.h  Session.h  SyntaxHighlighter.h  ide.h
editors/ide/include/style/: CMakeLists.txt  CMakeLists.txt~  StyleGlobals.h
editors/ide/qml/: PanopticonIDE.qml
editors/ide/qml/core/: TextArea.qml
editors/ide/resources/: Panopticon.qss
editors/ide/src/: CMakeLists.txt
editors/ide/src/core/: CMakeLists.txt  EditBuffer.cpp  FilePanel.cpp  MainWindow.cpp  Session.cpp  SyntaxHighlighter.cpp  ide.cpp
editors/ide/src/style/: CMakeLists.txt~  StyleGlobals.cpp
include/: CMakeLists.txt
include/Grammar/: CMakeLists.txt  CMakeLists.txt~  conditionals.h  divide.h  grammar.h  lexer.h  lexglobal.h  minus.h  parse.h  parse_ast.h  parsingutilities.h  plus.h  tokens.h  typeinference.h
include/core/: CMakeLists.txt  CMakeLists.txt~  Memory.h  Trie.h  VM.h  container_primitives.h  containers.h  errors.h  function.h  heap.h  list.h  math_primitives.h  operators.h  panopticon.h  stack.h  thunk.h  types.h
src/: CMakeLists.txt  CMakeLists.txt~  main.cpp
src/Grammar/: CMakeLists.txt  conditionals.cpp  divide.cpp  grammar.cpp  grammar.out  grammar.out~  grammar.y  grammar.y.autosave  lex.yy.c  lexer.c  lexer.l  minus.cpp  parse.cpp  parse_ast.cpp  parsingutilities.cpp  plus.cpp  typeinference.cpp
src/core/: CMakeLists.txt  Memory.cpp  Trie.cpp  VM.cpp  container_primitives.cpp  containers.cpp  errors.cpp  function.cpp  heap.cpp  list.cpp  math_primitives.cpp  operators.cpp  operators.cpp.autosave  panopticon.cpp  stack.cpp  thunk.cpp  types.cpp
tests/: BraunTreeListTests  BraunTreeListTests.optic  Crashes.optic  Dictionary tests.optic  Experiments.optic  FunctionPassingTests.optic  IOSyntaxIdeas.optic  MemoryLeakTests.optic  SynthDef design ideas.optic  TypeTests.optic  llvmtests.optic  operator_unit_tests.optic
